Deleted useless files

--- a/.gitignore
+++ b/.gitignore
@@ -262,4 +262,10 @@ __pycache__/
 
 #particular files and forlders
 ReadMe.txt
-docs/
+docs/CP.docx
+docs/DataStorageQueries.sql
+docs/Безымянный.png
+docs/Документ Microsoft Word.docx
+docs/Курсовой (Автосохраненный).docx
+docs/Курсовой.docx
+docs/Новый текстовый документ.txt
