--- a/ForumProject/ForumProject.csproj
+++ b/ForumProject/ForumProject.csproj
@@ -56,6 +56,12 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -185,6 +191,7 @@
     <Compile Include="Models\LevelInfo.cs">
       <DependentUpon>ForumDbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PageInfo.cs" />
     <Compile Include="Models\Popular.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\Records.cs">
@@ -232,6 +239,7 @@
     <Content Include="Content\icons\star_blue24.png" />
     <Content Include="Content\icons\up.png" />
     <Content Include="Content\IndexCssPage.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="Content\ProfileCssPage.css" />
     <Content Include="Content\RecordViewPage.css" />
     <Content Include="Content\Reset.css" />
