--- a/ForumProject/Web.config
+++ b/ForumProject/Web.config
@@ -72,7 +72,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="ForumDBEntities" connectionString="metadata=res://*/Models.ForumDbModel.csdl|res://*/Models.ForumDbModel.ssdl|res://*/Models.ForumDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\ForumDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+<connectionStrings><add name="ForumDBEntities" connectionString="data source=DESKTOP-QR3P549;initial catalog=ForumDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
