--- a/ForumProject/ForumProject.csproj
+++ b/ForumProject/ForumProject.csproj
@@ -46,6 +46,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -177,6 +180,13 @@
     <Compile Include="Models\Popular.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Models\SignInUp.cs" />
+    <Compile Include="Models\ViewModels\AddCommentViewModel.cs" />
+    <Compile Include="Models\ViewModels\AddRecordViewModel.cs" />
+    <Compile Include="Models\ViewModels\ProfileViewModel.cs" />
+    <Compile Include="Models\ViewModels\RecordsListViewModel.cs" />
+    <Compile Include="Models\ViewModels\RecordViewModel.cs" />
+    <Compile Include="Models\ViewModels\SubtopicViewModel.cs" />
+    <Compile Include="Models\ViewModels\UserAddsRecordViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
