--- a/ForumProject/Web.config
+++ b/ForumProject/Web.config
@@ -72,4 +72,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="ForumDBEntities" connectionString="data source=DESKTOP-QR3P549;initial catalog=ForumDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+    <connectionStrings>
+        <add name="ForumDBEntities" connectionString="data source=DESKTOP-QR3P549;initial catalog=ForumDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    </connectionStrings>
+</configuration>
