--- a/ForumProject/packages.config
+++ b/ForumProject/packages.config
@@ -13,6 +13,9 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
@@ -21,9 +24,15 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net452" />
+  <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
